<resources>
    <string name="app_name">Diabetes-BS</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="general">general</string>
    <string name="language">Language</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="blood_sugar">Blood sugar</string>
    <string name="before_sleep">At bedtime</string>
    <string name="before_dawn">Before dawn</string>
    <string name="before_breakfast">Before breakfast</string>
    <string name="after_breakfast">After breakfast</string>
    <string name="before_lunch">Before lunch</string>
    <string name="after_lunch">After lunch</string>
    <string name="before_dinner">Before dinner</string>
    <string name="after_dinner">After dinner</string>
    <string name="log_in">Log in</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="safe_range">Safe range: 4.4-10.0 mmol/L</string>
    <string name="measured_value">Measured value</string>
    <string name="input_measured_value">Input value</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="check_value">Please check your measure value!</string>
    <string name="distribution">Distribution</string>
    <string name="trend">Trend</string>
    <string name="low">Low: %1$s</string>
    <string name="high">High: %1$s</string>
    <string name="fine">Fine: %1$s</string>
    <string name="total">Total: %1$s</string>
    <string name="warning">Warning: %1$s</string>
    <string name="compare">Compare</string>
    <string name="leechdom">Leechdom</string>
    <string name="diet">Diet</string>
    <string name="athletics">Athletics</string>
    <string name="leechdom_query">Leechdom query</string>
    <string name="my_leechdom">My leechdom</string>
    <string name="my_recipes">My recipes</string>
    <string name="many_recipes">Many recipes</string>
    <string name="my_athletics">My athletics</string>
    <string name="athletics_details">Athletics details</string>
    <string name="name">Name: %1$s</string>
    <string name="hospital">Hospital: %1$s</string>
    <string name="position">Position: %1$s</string>
    <string name="feedback">Feedback: %1$s</string>
    <string name="years">Years: %1$s</string>
    <string name="daily_reading">Daily reading: %1$s</string>
    <string name="tips">Tips: to maintain good habits, adhere to exercise, is an effective means of preventing diabetes.</string>
    <string name="loading">loading...</string>
    <string name="server_time_out">Server time-out!</string>
    <string name="history_record">History record</string>
    <string name="hot_serach">Hot serach</string>
    <string name="input_key_word">Input key word</string>
    <string name="search">Search</string>
    <string name="medicine_info">Medicine infomation</string>
    <string name="medicine_name">Medicine name</string>
    <string name="side_effect">Side effect</string>
    <string name="drug_usage">Drug usage</string>
    <string name="adverse_reactions">Adverse reactions</string>
    <string name="clear_all">Clear all</string>
    <string name="input_verification_code">Input validate code</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="event">Event</string>
    <string name="describe">Describe</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="chose">Chose</string>
    <string name="add_notification">Add notification</string>
    <string name="diy">DIY</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="tur">Tur</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="mon">Mon</string>
    <string name="recipe_info">Recipe info</string>
    <string name="about_us">About us</string>
    <string name="copyright_version">Version: %1$s</string>
    <string name="share_apk">Share APK to friends</string>
    <string name="failed_share">Share failed</string>
    <string name="rate_us">Rate us at App Store</string>
    <string name="language_select">English</string>
    <string name="theme">Theme</string>
    <string name="theme_pink">Lovely pink</string>
    <string name="theme_blue">Deep Sea Blue</string>
    <string name="theme_black">Elegant black</string>
    <string name="theme_purple">Mysterious purple</string>
    <string name="designation">Designation：%1$s</string>
    <string name="usage">Usage：%1$s</string>
    <string name="dosage">Dosage：%1$s</string>
    <string name="diet_time">Meal time：%1$s</string>
    <string name="blood_sugar_change">Blood sugar：%1$s</string>
    <string name="athletics_time">Athletics_time：%1$s</string>
    <string name="leechdom_history">Leechdom history</string>
    <string name="add_my_leechdom_tip">Add medication situation\nSo that we can timely remind you take medicine</string>
    <string name="add_leechdom">Add leechdom</string>
    <string name="base_info">Base info</string>
    <string name="medicine_name_colon">Medicine name:</string>
    <string name="drug_doses__colon">Drug doses:</string>
    <string name="medication_time">Medication time</string>
    <string name="add_medication_time">Add medication time</string>
    <string name="medication_period">Medication period</string>
    <string name="one_week">One week</string>
    <string name="tow_week">Tow weeks</string>
    <string name="one_month">One month</string>
    <string name="open_notifition">Open notifition</string>
    <string name="remarks">Remarks</string>
    <string name="drug_doses">Drug doses</string>
    <string name="please_input_drag_name">Please input drag name</string>
    <string name="please_input_drag_doses">Please input drag doses</string>
    <string name="please_choose_medication_time">Please choose medication time</string>
    <string name="please_choose_medication_period">Please choose medication period</string>
    <string name="save">Save</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="mg">mg</string>
    <string name="mmol_l">mmol/l</string>
    <string name="nothing_hear">Oh, there\'s nothing here</string>
    <string name="medication_time_colon">Medication_time：%1$s</string>
    <string name="unknown">Unknown</string>
    <string name="data_eorr">Data eorr</string>
    <string name="add_my_recipe_tip">Add your recipes\nSo that we can analyze your diet condition</string>
    <string name="eg_food_name">eg:steak</string>
    <string name="food_name">Food name</string>
    <string name="food_material">Food material</string>
    <string name="eg_food_material">eg:\n a steak,\n a egg,\n a pasta\n ...</string>
    <string name="eat_time">Eat time</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dining_category">Dining category</string>
    <string name="blood_sugar_level">Blood sugar level</string>
    <string name="before_dining">Before dining</string>
    <string name="after_dining">After dining</string>
    <string name="please_input_food_name">Please input food name</string>
    <string name="please_input_food_material">Please input food material"</string>
    <string name="please_input_blood_sugar_level_before_dining">Please input blood sugar level before dining</string>
    <string name="please_input_blood_sugar_level_after_dining">Please input blood sugar level after dining</string>
    <string name="find">Find</string>
    <string name="add_my_athletic_tip">Let us together witness your fitness journey</string>
    <string name="sidn_in">Sign in</string>
    <string name="unknown_error">Unknown error</string>
    <string name="user_name_not_null">The user name cannot be null</string>
    <string name="pwd_not_null">The password cannot be empty</string>
    <string name="code_error">Verificaton code error</string>
    <string name="user_name_or_pwd_error">Error Incorrect username or password</string>
    <string name="enter">Enter</string>
    <string name="loging_in">be loging in...</string>
    <string name="age">Age</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="age_not_null">The age cannot be empty</string>
    <string name="sign_error">Sign error</string>
    <string name="sign_success">Sign success</string>
    <string name="duplicate_user_name">Duplicate user name，please log in again</string>
    <string name="signing">Signing...</string>
    <string name="edit">Edit</string>
    <string name="publish">Publish</string>
    <string name="uploading">Uploading...</string>
    <string name="publish_failure">Publish failure</string>
    <string name="publish_success">Publish success</string>
    <string name="user_info">User information</string>
    <string name="sex">Sex</string>
    <string name="log_out">Log out</string>
    <string name="n_year_old">%1$s-year-old</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="next_question">Next question</string>
    <string name="survey_completion">Survey completion</string>
    <string name="please_choose_answer">Please choose answer</string>
    <string name="send">Send</string>
    <string name="cant_null">Cannot send an empty string</string>
    <string name="send_fail">Fail in send</string>
</resources>
