<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.czk.diabetes.setting.MyPreferenceCategory
        android:title="@string/general"
        android:textStyle="bold">

        <PreferenceScreen
            android:title="@string/language"
            android:summary="@string/language_select"
            android:layout="@layout/preference_general"
            android:key="language">
            <intent
                android:targetPackage="com.czk.diabetes"
                android:targetClass="com.czk.diabetes.setting.LanguageSettingActivity" />
        </PreferenceScreen>

        <com.czk.diabetes.setting.ThemeDialogPreference
            android:title="@string/theme"
            android:summary="@string/theme"
            android:key="theme">
        </com.czk.diabetes.setting.ThemeDialogPreference>
    </com.czk.diabetes.setting.MyPreferenceCategory>
</PreferenceScreen>