<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white_light"
    android:orientation="vertical">
    <!--头部-->
    <include layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--基本信息-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shadow_white_card"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <!--标题-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/base_info"
                        android:textColor="@color/txt_light_color"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_leechdom_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:singleLine="true"
                            android:text="@string/medicine_name_colon"
                            android:textSize="16sp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:gravity="center_vertical|right"
                            android:singleLine="true"
                            android:textColor="@color/txt_light_color"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divide_line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_drug_doses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:singleLine="true"
                            android:text="@string/drug_doses"
                            android:textSize="16sp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:gravity="center_vertical|right"
                            android:singleLine="true"
                            android:textColor="@color/txt_light_color"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divide_line" />
                </LinearLayout>
            </LinearLayout>
            <!--用药时间-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shadow_white_card"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <!--标题-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/medication_time"
                        android:textColor="@color/txt_light_color"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_add"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:padding="2dp" />

                        <TextView
                            android:id="@+id/txt_add_medicine_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="4dp"
                            android:singleLine="true"
                            android:text="@string/add_medication_time"
                            android:textColor="?attr/theme_color"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <!--用药周期-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shadow_white_card"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <!--标题-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/medication_period"
                        android:textColor="@color/txt_light_color"
                        android:textSize="14sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_margin="4dp"
                        android:padding="2dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/one_week"
                        android:textColor="?attr/theme_color_light"
                        android:textSize="16sp"
                        android:background="@drawable/rectangle_line_them_light_r_2"/>

                    <TextView
                        android:layout_margin="4dp"
                        android:padding="2dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/tow_week"
                        android:textColor="?attr/theme_color_light"
                        android:textSize="16sp"
                        android:background="@drawable/rectangle_line_them_light_r_2"/>

                    <TextView
                        android:layout_margin="4dp"
                        android:padding="2dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/one_month"
                        android:textColor="?attr/theme_color_light"
                        android:textSize="16sp"
                        android:background="@drawable/rectangle_line_them_light_r_2"/>

                    <TextView
                        android:layout_margin="4dp"
                        android:padding="2dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/diy"
                        android:textColor="?attr/theme_color_light"
                        android:textSize="16sp"
                        android:background="@drawable/rectangle_line_them_light_r_2"/>
                </LinearLayout>
            </LinearLayout>
            <!--设置提醒-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shadow_white_card"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <!--标题-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_notification"
                        android:textColor="@color/txt_light_color"
                        android:textSize="14sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_margin="4dp"
                        android:padding="2dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/open_notifition"
                        android:textColor="?attr/theme_color_light"
                        android:textSize="16sp"/>
                    <ImageView
                        android:id="@+id/iv_toggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp" />
                </LinearLayout>
            </LinearLayout>

            <!--备注-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shadow_white_card"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <!--标题-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/remarks"
                        android:textColor="@color/txt_light_color"
                        android:textSize="14sp" />

                </LinearLayout>
                <EditText
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_line_them_light_r_2"
                    android:textColor="@color/txt_light_color"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>