<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white">
    <!--头部-->
    <include layout="@layout/layout_title_no_shadow" />

    <!--主体-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/theme_color"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/icon" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/txt_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/txt_white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/share_apk"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:paddingLeft="16dp"
                android:background="@drawable/item_background_click"
                android:gravity="center_vertical"
                android:text="@string/share_apk"
                android:textColor="@color/txt_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/rate_us"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:paddingLeft="16dp"
                android:background="@drawable/item_background_click"
                android:gravity="center_vertical"
                android:text="@string/rate_us"
                android:textColor="@color/txt_black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/phone_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_light_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="©2017 CZK All Rights Reserved"
            android:textColor="@color/txt_light_color"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>