<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white_light"
    android:orientation="vertical">
    <!--头部-->
    <include layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/left_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/shadow_white_card"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/tip_theme_light_circular_bc"
                android:gravity="center">

                <ImageView
                    android:id="@+id/left_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/leechdom_query"
                android:textColor="@color/txt_black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/shadow_white_card"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/tip_theme_light_circular_bc"
                android:gravity="center">

                <ImageView
                    android:id="@+id/right_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/leechdom_history"
                android:textColor="@color/txt_black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shadow_white_card"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/my_function_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_leechdom"
            android:textColor="@color/txt_black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/add_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/add_icon"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/add_text"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/add_my_leechdom_tip"
                android:textColor="@color/txt_light_color"/>
        </LinearLayout>

        <ListView
            android:visibility="gone"
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:cacheColorHint="#00000000"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:drawSelectorOnTop="false"
            android:listSelector="@color/transparent"
            android:scrollbars="none" />
    </LinearLayout>
</LinearLayout>